--- a/contacts.html
+++ b/contacts.html
@@ -79,37 +79,27 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-10">
-              <h3>Contact details</h3>
-              <p class="text-gray-600">On this page you can find all necessary contacts to get in touch with me if you would like to collaborate, book a live event or ask a question.</p>
+              <h3>Contattaci!</h3>
+              <p class="text-gray-600">Ti piace cantare? Sai suonare uno strumento? Vuoi unirti e collaborare con noi? Hai qualche domanda?.</p>
             </div>
           </div>
           <div class="row row-50 justify-lg-content-center row-custom-border">
             <div class="col-lg-4 col-md-6">
               <div class="box-icon-classic">
-                <div class="icon novi-icon icon-primary icon-lg fl-bigmug-line-cellphone55"></div>
-                <h5 class="box-icon-classic-title">Phones</h5>
+                <div class="icon novi-icon icon-primary icon-md fl-bigmug-line-email64"></div>
+                <h5 class="box-icon-classic-title">E-mails</h5>
                 <ul class="box-icon-classic-list">
-                  <li><a href="tel:#">Phone 01: +1 (409) 987–5874</a></li>
-                  <li><a href="tel:#">Phone 02: +1 (409) 987–5874</a></li>
+                  <li><a href="mailto:c.sualidaquila@gmail.com">c.sualidaquila@gmail.com</a></li>
+                  <li>Matrimoni <a href="mailto:sualidaquila.coro@gmail.com">sualidaquila.coro@gmail.com</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="box-icon-classic">
                 <div class="icon novi-icon icon-primary icon-lg fl-bigmug-line-big104"></div>
-                <h5 class="box-icon-classic-title">address</h5>
+                <h5 class="box-icon-classic-title">Indirizzo</h5>
                 <ul class="box-icon-classic-list">
-                  <li><a href="#">6036 Richmond hwy., <br> Alexandria,  VA, 2230</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="box-icon-classic">
-                <div class="icon novi-icon icon-primary icon-md fl-bigmug-line-email64"></div>
-                <h5 class="box-icon-classic-title">e-mails</h5>
-                <ul class="box-icon-classic-list">
-                  <li><a href="mailto:#">info@demolink.org</a></li>
-                  <li><a href="mailto:#">mail@demolink.org</a></li>
+                  <li><a href="#">Piazza ddella chiesa <br> Turate, CO - 22078</a></li>
                 </ul>
               </div>
             </div>
@@ -123,7 +113,7 @@
           <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-10">
               <h3>Get in touch with me</h3>
-              <p class="text-gray-600">Feel free to drop a line or ask a question using the contact form below.</p>
+              <p class="text-gray-600">Contattaci usando il form sottostante</p>
             </div>
           </div>
           <!--RD Mailform-->
