--- a/contacts.html
+++ b/contacts.html
@@ -13,12 +13,14 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body">
-        <div class="cssload-container">
-          <div class="cssload-speeding-wheel"></div>
+        <div class="music-notes">
+          <span>♪</span>
+          <span>♫</span>
+          <span>♬</span>
         </div>
+        <p>Entra nel coro anche tu...</p>
       </div>
     </div>
     <div class="page">
@@ -36,7 +38,7 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img src="images/image-1.png" alt="" width="148" height="26"/></a>
+                    <!--Brand--><a class="brand" href="index.html"><img src="images/image-1.png" alt="" width="58" height="26"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-main-element">
