--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <style>.ie-panel{display: none;background: #2f8daf;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body">
         <div class="music-notes">
@@ -515,7 +514,7 @@
             </div>
             <div class="col-sm-6">
               <div class="footer-contact"><a href="contacts.html">
-                  <div class="icon novi-icon mdi mdi-email-outline"></div>Contact Me</a></div>
+                  <div class="icon novi-icon mdi mdi-email-outline"></div>Contattaci</a></div>
             </div>
           </div>
         </div>
