--- a/typography.html
+++ b/typography.html
@@ -397,12 +397,12 @@
           <div class="row row-15">
             <div class="col-sm-6">
               <p class="rights"><span>DJ Fox</span><span>&nbsp;</span><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
-                \ Design by <a href="https://www.templatemonster.com/">TemplateMonster</a>
+                \ Design by <a href="https://www.templatemonster.com/">TemplateMonster</a> and Monti Martina
               </p>
             </div>
             <div class="col-sm-6">
               <div class="footer-contact"><a href="contacts.html">
-                  <div class="icon novi-icon mdi mdi-email-outline"></div>Contact Me</a></div>
+                  <div class="icon novi-icon mdi mdi-email-outline"></div>Contattaci</a></div>
             </div>
           </div>
         </div>
