--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Archivio testi</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
                     </ul>
                   </div>
