--- a/contacts.html
+++ b/contacts.html
@@ -50,7 +50,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
                     </ul>
                   </div>
@@ -68,13 +68,13 @@
         </div>
       </header>
       <!-- Breadcrumbs-->
-      <section class="breadcrumbs-custom bg-image context-dark" style="background-image: url(images/bg-breadcrumbs-01-1920x480.jpg);">
+      <section class="breadcrumbs-custom bg-image context-dark" style="background-color: #222d4f;">
         <div class="container">
           <h2 class="breadcrumbs-custom-title">Contacts</h2>
         </div>
         <ul class="breadcrumbs-custom-path">
           <li><a href="index.html">Home</a></li>
-          <li class="active">Contacts</li>
+          <li class="active">Contatti</li>
         </ul>
       </section>
       <section class="section section-md bg-default">
