--- a/contacts.html
+++ b/contacts.html
@@ -91,8 +91,8 @@
                 <div class="icon novi-icon icon-primary icon-md fl-bigmug-line-email64"></div>
                 <h5 class="box-icon-classic-title">E-mails</h5>
                 <ul class="box-icon-classic-list">
-                  <li><a href="mailto:c.sualidaquila@gmail.com">c.sualidaquila@gmail.com</a></li>
-                  <li>Matrimoni <a href="mailto:sualidaquila.coro@gmail.com">sualidaquila.coro@gmail.com</a></li>
+                  <li>Animazione Liturgica: <a href="mailto:c.sualidaquila@gmail.com">c.sualidaquila@gmail.com</a></li>
+                  <li>Matrimoni: <a href="mailto:sualidaquila.coro@gmail.com">sualidaquila.coro@gmail.com</a></li>
                 </ul>
               </div>
             </div>
@@ -101,7 +101,7 @@
                 <div class="icon novi-icon icon-primary icon-lg fl-bigmug-line-big104"></div>
                 <h5 class="box-icon-classic-title">Indirizzo</h5>
                 <ul class="box-icon-classic-list">
-                  <li><a href="#">Piazza ddella chiesa <br> Turate, CO - 22078</a></li>
+                  <li><a href="#">Piazza della chiesa <br> Turate, CO - 22078</a></li>
                 </ul>
               </div>
             </div>
@@ -154,8 +154,8 @@
         <div class="container">
           <div class="row row-15">
             <div class="col-sm-6">
-              <p class="rights"><span>DJ Fox</span><span>&nbsp;</span><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
-                \ Design by <a href="https://www.templatemonster.com/">TemplateMonster</a> and Monti Martina
+              <p class="rights"><span>Coro Su Ali d'Aquila</span><span>&nbsp;</span><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
+                \ Design by TemplateMonster and Martina Monti
               </p>
             </div>
             <div class="col-sm-6">
