--- a/typography.html
+++ b/typography.html
@@ -396,8 +396,8 @@
         <div class="container">
           <div class="row row-15">
             <div class="col-sm-6">
-              <p class="rights"><span>DJ Fox</span><span>&nbsp;</span><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
-                \ Design by <a href="https://www.templatemonster.com/">TemplateMonster</a> and Monti Martina
+              <p class="rights"><span>Coro Su Ali d'Aquila</span><span>&nbsp;</span><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>\&nbsp;</span>All Rights Reserved
+                \ Design by TemplateMonster and Martina Monti
               </p>
             </div>
             <div class="col-sm-6">
