--- a/contacts.html
+++ b/contacts.html
@@ -70,7 +70,7 @@
       <!-- Breadcrumbs-->
       <section class="breadcrumbs-custom bg-image context-dark" style="background-color: #222d4f;">
         <div class="container">
-          <h2 class="breadcrumbs-custom-title">Contacts</h2>
+          <h2 class="breadcrumbs-custom-title">Contatti</h2>
         </div>
         <ul class="breadcrumbs-custom-path">
           <li><a href="index.html">Home</a></li>
@@ -91,7 +91,7 @@
                 <div class="icon novi-icon icon-primary icon-md fl-bigmug-line-email64"></div>
                 <h5 class="box-icon-classic-title">E-mails</h5>
                 <ul class="box-icon-classic-list">
-                  <li>Animazione Liturgica: <a href="mailto:c.sualidaquila@gmail.com">c.sualidaquila@gmail.com</a></li>
+                  <li>Generale: <a href="mailto:c.sualidaquila@gmail.com">c.sualidaquila@gmail.com</a></li>
                   <li>Matrimoni: <a href="mailto:sualidaquila.coro@gmail.com">sualidaquila.coro@gmail.com</a></li>
                 </ul>
               </div>
