--- a/contacts.html
+++ b/contacts.html
@@ -46,9 +46,9 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Chi siamo</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Typography</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Archivio testi</a>
                       </li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
