change riproduzione audio

--- a/index.html
+++ b/index.html
@@ -219,25 +219,25 @@
                     <div class="nav-video">
                       <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/preview" alt="" width="140" height="40"/>
                       </figure>
-                      <h6 class="nav-video-title">Concerto di Natale 2020 (virtuale)</h6>
+                      <h6 class="nav-video-title">Concerto di Natale 2022 (virtuale)</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-3" data-toggle="tab">
                     <div class="nav-video">
                       <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1CM4I_OVpnsdakxd9fvVMcaJi6tFjfYWv/preview" alt="" width="140" height="40"/>
                       </figure>
-                      <h6 class="nav-video-title">Concerto di Natale 2020 (virtuale)</h6>
+                      <h6 class="nav-video-title">Venite fedeli (virtuale)</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-4" data-toggle="tab">
                     <div class="nav-video">
                       <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1SEOHbusNYp_YmhWf8cKlKAx2pMVBjTq9/preview" alt="" width="140" height="40"/>
                       </figure>
-                      <h6 class="nav-video-title">Venite Fedeli</h6>
+                      <h6 class="nav-video-title">Concerto di Natale 2020 (virtuale)</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-5" data-toggle="tab">
                     <div class="nav-video">
                       <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/12xxZdIWvhuiPVY8SO19s3eXgdJOifS5V/preview" alt="" width="140" height="40"/>
                       </figure>
-                      <h6 class="nav-video-title">Popoli tutti</h6>
+                      <h6 class="nav-video-title">Popoli tutti (virtuale)</h6>
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-6" data-toggle="tab">
                     <div class="nav-video">
