--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
                 </div>
                 <!--Tab panes-->
                 <div class="tab-content">
-                  <div class="tab-pane fade show active" id="tabs-1-1" data-year="2018">
+                  <div class="tab-pane fade show active" id="tabs-1-1">
                     <div class="jp-modern jp-player-init">
                       <div class="jp-jplayer"></div>
                       <div class="jp-audio jp-audio-0" role="application" aria-label="media player">
@@ -281,7 +281,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tab-pane fade" id="tabs-1-2" data-year="2024">
+                  <div class="tab-pane fade" id="tabs-1-2">
                     <div class="jp-modern jp-player-init">
                       <div class="jp-jplayer"></div>
                       <div class="jp-audio jp-audio-1" role="application" aria-label="media player">
@@ -319,7 +319,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tab-pane fade" id="tabs-1-3" data-year="2025">
+                  <div class="tab-pane fade" id="tabs-1-3">
                     <div class="jp-modern jp-player-init">
                       <div class="jp-jplayer"></div>
                       <div class="jp-audio jp-audio-2" role="application" aria-label="media player">
@@ -394,7 +394,7 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
     
-  
+   
     <script>
     document.querySelectorAll('.nav-link').forEach(tab => {
       tab.addEventListener('click', function () {
