--- a/about.html
+++ b/about.html
@@ -289,9 +289,9 @@
                           <li class="jp-player-list-item" data-jp-title="Bianco Natal feat. Corpo Musicale Santa Cecilia Turate" data-jp-mp3="audio/Natale24/BiancoNatal.mp3"></li>
                           <li class="jp-player-list-item" data-jp-title="Buon Natale" data-jp-mp3="audio/Natale24/BuonNatale.mp3"></li>
                           <li class="jp-player-list-item" data-jp-title="Happy Xmas (war is over) feat Corpo Musicale Santa Cecilia Turate" data-jp-mp3="audio/Natale24/HappyXmas.mp3"></li>
-                          <li class="jp-player-list-item" data-jp-title="Harl the heralds angels sing" data-jp-mp3="audio/Natale24/Harktheheralds.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Hark the heralds angels sing" data-jp-mp3="audio/Natale24/Harketheheralds.mp3"></li>
                           <li class="jp-player-list-item" data-jp-title="In notte Placida" data-jp-mp3="audio/Natale24/inNotteplacida.mp3"></li>
-                          <li class="jp-player-list-item" data-jp-title="Santa Claus is coming to town" data-jp-mp3="audio/Natale24/SantaClaud.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Santa Claus is coming to town" data-jp-mp3="audio/Natale24/SantaClaus.mp3"></li>
                           <li class="jp-player-list-item" data-jp-title="Silent Night feat Corpo Musicale Santa Cecilia Turate" data-jp-mp3="audio/Natale24/SilentNight.mp3"></li>
                         </ul>
                         <div class="jp-modern-interface">
