change js per audio

--- a/about.html
+++ b/about.html
@@ -96,12 +96,13 @@
                 </div>
                 <h4 class="box-about-post-title">La nostra storia</h4>
 
-                <p> Da un'iniziativa di don Luigi e la giovane entusiasta Bianca Marina, nasce un piccolo coro di adolescenti che animava la messa della domnica sera.
-                    Col passare degli anni, il gruppo si è espanso, ampliando il suo impegno anche nella messa della domenica mattina. 
-                    Nel 2001 nasce ufficialmente il "Coro su Ali d'Aquila" coinvolgendo rgazzi di tutte le ètà: dai bambini di 6 anni fino agli adolescenti di 18, con diversi chitarristi e pianisti.
-                    L'impegno del coro per le celebrazioni, ed eventi occasionali, è diventato sempre più grande; tanto che nel 2015 anche gli adulti si uniscono al coro.</p>
+                <p> La nostra avventura inizia nel 1997 da un'iniziativa di don Gianluca : sotto la guida di Bianca marina si forma un piccolo coro che anima la messa della domenica mattina.
+                  Nel 2001 il coro ha iniziato a prendere forma unendo ragazzi di tutte le età: dalle elementari fino agli adolescenti. E' così che nasce ufficialmente il "Coro Su Ali d'Aquila" 
+                  diretto da Bianca Marina Di Luca Cardillo ed Elisabetta Mantegazza.
+                  Con il passare del tempo, la fascia d'età si è ampliata arrivando a unire giovani ed adulti per un totale di 60 elementi.</p>
                   
                 <p> Ad oggi il coro si è ridimensionato, ma rimane una grande famiglia di persone unite dalla passione per il canto e la musica, che si ritrovano per animare le celebrazioni e condividere momenti di gioia e divertimento. </p>
+                <p>Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
               </div>
             </div>
           </div>
