change js per audio

--- a/about.html
+++ b/about.html
@@ -102,11 +102,21 @@
                   Con il passare del tempo, la fascia d'età si è ampliata arrivando a unire giovani ed adulti per un totale di 60 elementi.</p>
                   
                 <p> Ad oggi il coro si è ridimensionato, ma rimane una grande famiglia di persone unite dalla passione per il canto e la musica, che si ritrovano per animare le celebrazioni e condividere momenti di gioia e divertimento. </p>
-                <p>Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
+                
               </div>
             </div>
           </div>
         </div>
+
+        <section class="section text-center services">
+
+          <p> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
+
+          </section>
+
+
+
+
       </section>
       <section class="section section-lg-3 bg-default">
         <!-- Owl Carousel-->
