--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               </div>
               <div class="tab-pane fade" id="tabs-2-2">
                 <div class="entry-video embed-responsive embed-responsive-16by9">
-                  <iframe width="886" height="668" src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/preview" allowfullscreen=""></iframe>
+                  <iframe width="886" height="668" src="preview" allowfullscreen=""></iframe>
                 </div>
               </div>
               
@@ -217,7 +217,7 @@
                     </div></a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-2" data-toggle="tab">
                     <div class="nav-video">
-                      <figure class="nav-video-figure"><img src="https://drive.google.com/file/d/1Fe5dBuh6b-C57zeb_R1XRvDj0CZQ89lR/preview" alt="" width="140" height="40"/>
+                      <figure class="nav-video-figure"><img src="/preview" alt="" width="140" height="40"/>
                       </figure>
                       <h6 class="nav-video-title">Concerto di Natale 2022 (virtuale)</h6>
                     </div></a></li>
