change js per audio

--- a/about.html
+++ b/about.html
@@ -109,8 +109,9 @@
         </div>
 
         <section class="section text-center services">
-
-          <p> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</p>
+          <h2>Unisciti a noi!</h2>
+          <h2> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o 
+            pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h2>
 
           </section>
 
