change js per audio

--- a/about.html
+++ b/about.html
@@ -110,8 +110,8 @@
 
         <section class="section text-center services">
           <h2>Unisciti a noi!</h2>
-          <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o 
-            pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+          <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento</h6>
+            <h6> o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
 
           </section>
 
