change js per audio

--- a/about.html
+++ b/about.html
@@ -110,9 +110,15 @@
 
         <section class="section text-center services">
           <h2>Unisciti a noi!</h2>
-          <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento</h6>
-            <h6> o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
-
+          <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+          <div class="box-event novi-bg">
+            <div class="box-event-text-wrap">
+              <h5 class="box-event-text-title">
+                <a href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Autunno&Festa della gioventù 2018</a></h5>
+            </div>
+            <div class="box-event-button-wrap">
+              <a class="button button-outline button-sm" href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Downaload</a></div>
+          </div>
           </section>
 
 
