change js per audio

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
         <section class="section text-center services">
           <h2>Unisciti a noi!</h2>
           <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
-          <div class="box-event novi-bg">
+          <div class="box-event novi-bg center">
             <div class="box-event-button-wrap">
               <a class="button button-outline button-sm" href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Downaload</a></div>
           </div>
