--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
           </div>
         </div>
 
-        <section class="section text-center services">
+        <section class="section section-lg-3 text-center">
           <h2>Unisciti a noi!</h2>
           <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
           <div class="box-event novi-bg">
