--- a/about.html
+++ b/about.html
@@ -108,18 +108,6 @@
           </div>
         </div>
 
-        <section class="section section-lg-3 text-center">
-          <h2>Unisciti a noi!</h2>
-          <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
-          <div class="box-event novi-bg">
-            <div class="box-event-button-wrap">
-              <a class="button button-outline button-sm" href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
-          </div>
-          </section>
-
-
-
-
       </section>
       <section class="section section-lg-3 bg-default">
         <!-- Owl Carousel-->
@@ -214,6 +202,17 @@
           </div>
         </div>
       </section>
+
+
+      <section class="section text-center services">
+        <h2>Unisciti a noi!</h2>
+        <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+        <div class="box-event novi-bg">
+          <div class="box-event-button-wrap">
+            <a class="button button-outline button-sm" href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
+        </div>
+      </section>
+
       <section class="section section-lg bg-default">
         <div class="container">
           <div class="row row-75 flex-lg-row-reverse">
