--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
         <h3>Unisciti a noi!</h3>
         <h6> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
         <div class="box-event novi-bg">
-          <div class="box-event-button-wrap">
+          <div class="download-button">
             <a class="button button-outline button-sm" href="https://drive.google.com/uc?export=download&id=1RhQLiah44LlVP_wreFKVPfLXDKaKPMGK">Scarica il modulo</a></div>
         </div>
       </section>
